edit image link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
   <link rel="stylesheet" type="text/css" media="all" href="./style.css" />
 <div align="center">
-  <img src="./cropped-ROWE_IT_LOGOTYPE-1.png" alt="RoweIT" width="169" height="41" align="center"/><br>
+  <img src="/images/cropped-ROWE_IT_LOGOTYPE-1.png" alt="RoweIT" width="169" height="41" align="center"/><br>
   <font size="5" style="color: #1c578c" align="center">Handbook</font>
 </div>
 <div class="topnav">
