Added links to the buttons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
   <font size="5" style="color: #1c578c" align="center">Handbook</font>
 </div>
 <div class="topnav">
-  <a href="#">Home</a>
-  <a href="#">Health and Safety</a>
-  <a href="#">Information Security</a>
-  <a href="#">Operations</a>
-  <a href="#">People</a>
-  <a href="#">Quality</a>
+  <a href="./Employee-Handbook.md">Home</a>
+  <a href="./health-and-safety/README.md">Health and Safety</a>
+  <a href="./information-security/README.md">Information Security</a>
+  <a href="./operations/README.md">Operations</a>
+  <a href="./people/README.md">People</a>
+  <a href="./quality/README.md">Quality</a>
 </div> <br><br>
