--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,14 @@
-<link rel="stylesheet" type="text/css" media="all" href="./style.css" />
+<link rel="stylesheet" type="text/css" media="all" href="/style.css" />
 <div align="center">
+  <br>
   <img src="/images/cropped-ROWE_IT_LOGOTYPE-1.png" alt="RoweIT" width="169" height="41" align="center"/><br>
   <font size="5" style="color: #1c578c" align="center">Handbook</font>
 </div>
 <div class="topnav">
-  <a href="./Employee-Handbook.md">Home</a>
-  <a href="./health-and-safety/README.md">Health and Safety</a>
-  <a href="./information-security/README.md">Information Security</a>
-  <a href="./operations/README.md">Operations</a>
-  <a href="./people/README.md">People</a>
-  <a href="./quality/README.md">Quality</a>
-</div> <br><br>
+  <a href="/index.html">Home</a>
+  <a href="/health-and-safety/README.html">Health and Safety</a>
+  <a href="/information-security/README.html">Information Security</a>
+  <a href="/operations/README.html">Operations</a>
+  <a href="/people/README.html">People</a>
+  <a href="/quality/README.html">Quality</a>
+</div> <br>
