--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   float: left;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 25px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -28,20 +28,6 @@ h1 {
   color: #9bb6b5;
 }
 
-/* Links */
-a[href$=".html"]:link, a[href$=".html"]:visited {
-  background-color: #1c588c;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: #9bb6b5;
-}
-
 /* Section Style */
 section {
   padding-left: 80px;
@@ -51,9 +37,10 @@ section {
   max-width: 1000px;
 }
 
-/* center images */
+/* Center images */
 img {
-  max-width:1000px;
+  max-width: 1000px;
+  max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -63,6 +50,8 @@ img {
 blockquote {
   background-color: #e7f3fe;
   border-left: 6px solid #2196F3;
+  margin: 1.5em 25px;
+  padding: 1px 10px;
 }
  
 /* Table */
