style tweaks, sticky header, better urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" media="all" href="/style.css" />
+<div id="header">
 <div align="center">
   <br>
   <img src="/images/cropped-ROWE_IT_LOGOTYPE-1.png" alt="RoweIT" width="169" height="41" align="center"/><br>
@@ -6,9 +7,10 @@
 </div>
 <div class="topnav">
   <a href="/index.html">Home</a>
-  <a href="/health-and-safety/README.html">Health and Safety</a>
-  <a href="/information-security/README.html">Information Security</a>
-  <a href="/operations/README.html">Operations</a>
-  <a href="/people/README.html">People</a>
-  <a href="/quality/README.html">Quality</a>
-</div> <br>
+  <a href="/health-and-safety/">Health and Safety</a>
+  <a href="/information-security/">Information Security</a>
+  <a href="/operations/">Operations</a>
+  <a href="/people/">People</a>
+  <a href="/quality/">Quality</a>
+</div>
+</div>
