--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -5,11 +5,9 @@
     <link rel="stylesheet" href="../menuStyle.css">
   </head>
   <body>
-    <Section>
+    <div class="content">
 	  {% include header.html %}
-      <div align="center">
-        {{ content }}
-      </div>
-    </Section>
+      {{ content }}
+    </div>
   </body>
 </html>
