--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <section>
+    <div class="content">
 	  {% include header.html %}
       {{ content }}
-    </section>
+    </div>
   </body>
 </html>
