--- a/style.css
+++ b/style.css
@@ -13,23 +13,32 @@
   background-color: #1c588c;
 }
 
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .topnav a:hover {
   background-color: #ddd;
   color: #1c588c;
 }
 
-/* Headings */
+#header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
+
+/* Main Style */
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
+  color: #1c588c;
+}
+
+h2 {
   color: #9bb6b5;
 }
 
-/* Section Style */
-section {
+.content {
   padding-left: 80px;
   padding-right: 80px;
   margin: auto;
