--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" media="all" href="/style.css" />
+<link rel="stylesheet" type="text/css" media="all" href="/handbook/style.css" />
 <div id="header">
 <div align="center">
   <br>
