--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/handbook/style.css">
+    <link rel="stylesheet" href="{{ "/handbook/style.css" | relative_url }}">
   </head>
   <body>
     <div class="content">
