--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/handbook/menuStyle.css">
+    <link rel="stylesheet" href="{{ "/handbook/menuStyle.css" | relative_url }}">
   </head>
   <body>
     <div class="content">
