--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,12 +5,12 @@
   <img src="{{"/images/cropped-ROWE_IT_LOGOTYPE-1.png" | relative_url }}" alt="RoweIT" width="169" height="41" align="center"/><br>
   <font size="5" style="color: #1c578c" align="center">Handbook</font>
 </div>
-<div class="topnav">
-  <a href="/index.html">Home</a>
-  <a href="/health-and-safety/">Health and Safety</a>
-  <a href="/information-security/">Information Security</a>
-  <a href="/operations/">Operations</a>
-  <a href="/people/">People</a>
-  <a href="/quality/">Quality</a>
+<div class="topnav" | relative_url }}">
+  <a href="{{"/index.html" | relative_url }}">Home</a>
+  <a href="{{"/health-and-safety/" | relative_url }}">Health and Safety</a>
+  <a href="{{"/information-security/" | relative_url }}">Information Security</a>
+  <a href="{{"/operations/" | relative_url }}">Operations</a>
+  <a href="{{"/people/" | relative_url }}">People</a>
+  <a href="{{"/quality/" | relative_url }}">Quality</a>
 </div>
 </div>
