--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@
   font-size: 17px;
 }
 
+a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 25px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
 .topnav {
   overflow: hidden;
   background-color: #1c588c;
