--- a/style.css
+++ b/style.css
@@ -8,15 +8,6 @@
   font-size: 17px;
 }
 
-a {
-  float: left;
-  color: white;
-  text-align: center;
-  padding: 14px 25px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
 .topnav {
   overflow: hidden;
   background-color: #1c588c;
@@ -88,4 +79,14 @@ tr:nth-child(even){background-color: #f2f2f2}
 th {
   background-color: #1c588c;
   color: white;
+}
+
+/* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: green;
 }
