--- a/style.css
+++ b/style.css
@@ -84,12 +84,15 @@ th {
 /* Menu links */
 .menu a:link {
   color: #9bb6b5;
+  text-decoration: none;
 }
 
 .menu a:hover {
   color: #1c588c;
+  text-decoration: none;
 }
 
-a:visited {
+.menu a:visited {
   text-decoration: none;
+  color: #9bb6b5;
 }
